--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <changelist>-SNAPSHOT</changelist>
     <gitHubRepo>jenkinsci/lib-${project.artifactId}</gitHubRepo>
     <asm.version>9.5</asm.version>
+   <maven.compiler.release>8</maven.compiler.release>
   </properties>
 
   <dependencies>
